objects/EUR_CRM_CTM_Contract_setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Amount_fields__c</fullName>
        <inlineHelpText>1, 2 or all 3 based on contract duration.</inlineHelpText>
        <label>Amount fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Check_volume_changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true - Mobile app redirect the user to Pouring refund section to check the volume changes
If not - nothing happen</description>
        <label>Check volume changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Child_object_fields__c</fullName>
        <label>Child object fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ContractRT__c</fullName>
        <label>Contract Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Activity_ItemRT__c</fullName>
        <label>Contract Activity Item Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_ItemRT__c</fullName>
        <label>Contract Product Item Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DependencyID__c</fullName>
        <label>Dependency external ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclude_from_Contract_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Contract Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Header_object_fields__c</fullName>
        <label>Header object fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_profitable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is profitable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_List_of_required_fields__c</fullName>
        <label>List of required fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_ExtID__c</fullName>
        <label>Mechanic External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_Design_Screen__c</fullName>
        <label>Mobile Design Screen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adding brand with amount</fullName>
                    <default>true</default>
                    <label>Adding brand with amount</label>
                </value>
                <value>
                    <fullName>Filling amount with description</fullName>
                </value>
                <value>
                    <fullName>3 types of amount</fullName>
                </value>
                <value>
                    <fullName>Multiple activities</fullName>
                </value>
                <value>
                    <fullName>Configurable activities</fullName>
                </value>
                <value>
                    <fullName>Configurable activity</fullName>
                </value>
                <value>
                    <fullName>Multiple activities config</fullName>
                    <isActive>false</isActive>
                    <label>Multiple activities config</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Not_Create_Activity_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Create Activity Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_level__c</fullName>
        <label>Product level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR_CRM_Brand__c</fullName>
                    <default>true</default>
                    <label>EUR_CRM_Brand__c</label>
                </value>
                <value>
                    <fullName>EUR_CRM_Quality__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_Size__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_SKU__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Required_Product_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is necessary to add Contract Product Item(EU) for concrete Contract Activity Item(EU)</description>
        <label>Required Product Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Setting_Type__c</fullName>
        <label>Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Listing</fullName>
                    <default>true</default>
                    <label>Listing</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Pouring Refund</fullName>
                </value>
                <value>
                    <fullName>Must Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Should_be_used_on_VT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should be used on VT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Use_Contract_Mechanic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Contract Mechanic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_of_required_fields__c</fullName>
        <label>List of required fields</label>
        <type>TextArea</type>
    </fields>
    <label>CTM Contract setting</label>
    <listViews>
        <fullName>All_GB_settings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>EUR_CRM_Product_level__c</columns>
        <columns>EUR_CRM_Setting_Type__c</columns>
        <columns>EUR_CRM_Mobile_Design_Screen__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>GB</value>
        </filters>
        <label>All GB settings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CTM Contract settings</pluralLabel>
</CustomObject>